--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
 
+        android:name=".model.db.SuperHeroDBInstance"
 
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
